--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://karolinapater.github.io/praca-inzynierska",
+  "homepage": "https://karolinapater.github.io/up-web",
   "name": "projekt_strony",
   "version": "0.1.0",
   "private": true,
