--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://karolinapater.github.io/warstwa-frontendowa/",
+  "homepage": "https://karolinapater.github.io/materialy/",
   "name": "warstwa-frontendowa",
   "version": "0.1.0",
   "private": true,
